infra/k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: coldcase
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: coldcase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: devdamian/coldcase-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
