infra/k8s/simulador.yaml
apiVersion: v1
kind: Service
metadata:
  name: simulador
  namespace: coldcase
spec:
  ports:
    - port: 4000
      targetPort: 4000
  selector:
    app: simulador
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulador
  namespace: coldcase
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: simulador
  template:
    metadata:
      labels:
        app: simulador
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: simulador
          image: devdamian/coldcase-simulador:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: simulador-storage
              mountPath: /usr/src/app/data
      volumes:
        - name: simulador-storage
          emptyDir: {}
